[gd_scene load_steps=12 format=3 uid="uid://bcyxx1kebmk6k"]

[ext_resource type="Script" uid="uid://bayr35br32q5a" path="res://ui/win/win_screen.gd" id="1_ovw00"]
[ext_resource type="FontFile" uid="uid://dc7dxafyie71e" path="res://sprites/ComicRelief-Regular.ttf" id="2_8vl7x"]
[ext_resource type="Resource" uid="uid://r4hc1bpkd5e5" path="res://level/meta/level_info.tres" id="2_uvmed"]
[ext_resource type="AudioStream" uid="uid://dk87gpaaecl4i" path="res://audio/sfx/death.wav" id="4_y2wna"]
[ext_resource type="AudioStream" uid="uid://5m1pdq7uxr7e" path="res://audio/sfx/meow.wav" id="5_bxd1f"]
[ext_resource type="AudioStream" uid="uid://blkm861cl5nd8" path="res://audio/sfx/explosion.wav" id="6_ekpv7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekpv7"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Animation" id="Animation_f4d2w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/WinText:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ho1bm"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ujbok"]
resource_name = "turn"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/WinText:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.3490658503988659, 0.0, -0.34906584, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ho1bm"]
_data = {
&"RESET": SubResource("Animation_f4d2w"),
&"fade_in": SubResource("Animation_ho1bm"),
&"turn": SubResource("Animation_ujbok")
}

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ovw00")
level_info = ExtResource("2_uvmed")
metadata/_custom_type_script = "uid://bayr35br32q5a"

[node name="DeathsTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="FishBonesTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="MainMenuTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ekpv7")

[node name="WinText" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -203.0
offset_top = 35.0
offset_right = 203.0
offset_bottom = 176.0
grow_horizontal = 2
pivot_offset = Vector2(288, 70)
theme_override_colors/font_color = Color(1, 0.80784315, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_8vl7x")
theme_override_font_sizes/font_size = 100
text = "You Win!"

[node name="FadeInPlayer" type="AnimationPlayer" parent="CanvasLayer"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_ho1bm")
}
speed_scale = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="DeathsLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.5254902, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_8vl7x")
theme_override_font_sizes/font_size = 40
text = "Deaths"
horizontal_alignment = 1

[node name="DeathsText" type="Label" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8vl7x")
theme_override_font_sizes/font_size = 40
text = "500"
horizontal_alignment = 1

[node name="FishBonesLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.5254902, 0.4392157, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_8vl7x")
theme_override_font_sizes/font_size = 40
text = "Fish Bones"
horizontal_alignment = 1

[node name="FishBonesText" type="Label" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8vl7x")
theme_override_font_sizes/font_size = 40
text = "0/10"
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.5
offset_top = -130.0
offset_right = 128.5
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_8vl7x")
theme_override_font_sizes/font_size = 50
text = "Main Menu"

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_y2wna")

[node name="FishBoneSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bxd1f")
pitch_scale = 2.0

[node name="MainMenuSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ekpv7")

[connection signal="timeout" from="DeathsTimer" to="." method="_on_deaths_timer_timeout"]
[connection signal="timeout" from="FishBonesTimer" to="." method="_on_fish_bones_timer_timeout"]
[connection signal="timeout" from="MainMenuTimer" to="." method="_on_main_menu_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
